<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="gesture_message">求救</string>
    <string name="gesture_flashlight">电筒</string>
    <string name="gesture_music">音乐</string>
    <string name="gesture_next_song">下一首</string>
    <string name="gesture_up_song">上一首</string>
    <string name="gesture_camera">拍照</string>
    <string name="gesture_quick_capture">偷拍</string>
    <string name="app_name">指尖轻舞</string>
    <string name="label_create_gesture">Create a gesture</string>
    <string name="gesture_recognize">手势识别</string>
    <string name="button_add">Add gesture</string>
    <string name="button_reload">Reload</string>
    <string name="button_discard">Discard</string>
    <string name="button_done">Done</string>
    <string name="main_music">轻舞随听</string>
    <string name="main_camera">轻舞随拍</string>
    <string name="main_quick_capture">轻舞闪拍</string>
    <string name="main_light">轻舞光芒</string>
    <string name="main_sos">轻舞生机</string>
    <string name="main_app_launcher">我的轻舞</string>
    <string name="main_picture">我的相册</string>
    <string name="main_app_manager">应用管理</string>
    <string name="main_more">更多</string>
    <string name="prompt_gesture_name">Name</string>
    <string name="error_missing_name">You must enter a name</string>
    <string name="save_success">Gesture saved in %s</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="gestures_loading">Loading gestures...</string>
    <string name="gestures_empty">No gestures</string>
    <string name="gestures_activity">Gestures</string>
    <string name="gestures_rename">Rename</string>
    <string name="gestures_delete">Delete</string>
    <string name="gestures_delete_success">Gesture deleted</string>
    <string name="gestures_rename_title">Rename gesture</string>
    <string name="gestures_rename_label">Gesture name</string>
    <string name="gestures_error_loading">Could not load %s. Make sure you have storage available.</string>
    <string name="action_settings">Settings</string>
    <string name="onesong">1 song</string>
    <plurals name="Nsongs">
        <item quantity="other"><xliff:g id="count">%d</xliff:g> songs</item>
    </plurals>
    <plurals name="Nsongscomp">
        <item quantity="other"><xliff:g id="count_for_artist">%2$d</xliff:g> of <xliff:g id="total_count">%1$d</xliff:g> songs</item>
    </plurals>
    <plurals name="Nalbums">
        
        <item quantity="one">1 album</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> albums</item>
    </plurals>
    <string translatable="false" name="durationformatshort"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
    <string translatable="false" name="durationformatlong"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
    <string name="goto_start">Library</string>
    <string name="party_shuffle">Party shuffle</string>
    <string name="party_shuffle_off">Party shuffle off</string>
    <string name="delete_item">Delete</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="play_all">Play all</string>
    <string name="delete_artist_desc">All songs by <xliff:g id="artist">%s</xliff:g> will be permanently deleted from the SD card.</string>
    <string name="delete_artist_desc_nosdcard">All songs by <xliff:g id="artist">%s</xliff:g> will be permanently deleted from USB storage.</string>
    <string name="delete_album_desc">The entire album \"<xliff:g id="album">%s</xliff:g>\" will be permanently deleted from the SD card.</string>
    <string name="delete_album_desc_nosdcard">The entire album \"<xliff:g id="album">%s</xliff:g>\" will be permanently deleted from USB storage.</string>
    <string name="delete_song_desc">\"<xliff:g id="song">%s</xliff:g>\" will be permanently deleted from the SD card.</string>
    <string name="delete_song_desc_nosdcard">\"<xliff:g id="song">%s</xliff:g>\" will be permanently deleted from USB storage.</string>
    <string name="delete_confirm_button_text">OK</string>
    <plurals name="NNNtracksdeleted">
        
        <item quantity="one">1 song was deleted.</item>
        
        <item quantity="other"><xliff:g id="songs_to_delete">%d</xliff:g> songs were deleted.</item>
    </plurals>
    <string name="scanning">Scanning SD card\u2026</string>
    <string name="scanning_nosdcard">Scanning USB storage\u2026</string>
    <string name="nowplaying_title">Now playing</string>
    <string name="partyshuffle_title">Party shuffle</string>
    <string name="artists_title">Artists</string>
    <string name="albums_menu">Albums</string>
    <string name="albums_title">Albums</string>
    <string name="tracks_menu">Songs</string>
    <string name="tracks_title">Songs</string>
    <string name="playlists_menu">Playlists</string>
    <string name="playlists_title">Playlists</string>
    <string name="videos_title">Videos</string>
    <string name="all_title">All media</string>
    <string name="browse_menu">Artists</string>
    <string name="search_title">Search</string>
    <string name="no_tracks_title">No songs</string>
    <string name="no_videos_title">No videos</string>
    <string name="no_playlists_title">No playlists</string>
    <string name="delete_playlist_menu">Delete</string>
    <string name="edit_playlist_menu">Edit</string>
    <string name="rename_playlist_menu">Rename</string>
    <string name="playlist_deleted_message">Playlist deleted.</string>
    <string name="playlist_renamed_message">Playlist renamed.</string>
    <string name="recentlyadded">Recently added</string>
    <string name="recentlyadded_title">Recently added</string>
    <string name="podcasts_listitem">Podcasts</string>
    <string name="podcasts_title">Podcasts</string>
    <string name="sdcard_missing_title">No SD card</string>
    <string name="sdcard_missing_title_nosdcard">No USB storage</string>
    <string name="sdcard_missing_message">Your phone does not have an SD card inserted.</string>
    <string name="sdcard_missing_message_nosdcard">Your phone does not have USB storage.</string>
    <string name="sdcard_busy_title">SD card unavailable</string>
    <string name="sdcard_busy_title_nosdcard">USB storage unavailable</string>
    <string name="sdcard_busy_message">Sorry, your SD card is busy.</string>
    <string name="sdcard_busy_message_nosdcard">Sorry, your USB storage is busy.</string>
    <string name="sdcard_error_title">SD card error</string>
    <string name="sdcard_error_title_nosdcard">USB storage error</string>
    <string name="sdcard_error_message">An error was encountered on your SD card.</string>
    <string name="sdcard_error_message_nosdcard">An error was encountered on your USB storage.</string>
    <string name="sdcard_scanning_or_no_audio_message">Your phone is scanning audio or no audio.</string>
    <string name="unknown_artist_name">Unknown artist</string>
    <string name="unknown_album_name">Unknown album</string>
    <string name="shuffle_on_notif">Shuffle is on.</string>
    <string name="shuffle_off_notif">Shuffle is off.</string>
    <string name="repeat_off_notif">Repeat is off.</string>
    <string name="repeat_current_notif">Repeating current song.</string>
    <string name="repeat_all_notif">Repeating all songs.</string>
    <string name="ringtone_menu">Use as phone ringtone</string>
    <string name="ringtone2_menu">Use as phone ringtone(SIM2)</string>
    <string name="ringtone_menu_short">Use as ringtone(SIM1)</string>
    <string name="ringtone2_menu_short">Use as ringtone(SIM2)</string>
    <string name="ringtone_set">\"<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\" set as phone ringtone.</string>
    <string name="play_selection">Play</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="queue">Current playlist</string>
    <string name="new_playlist">New playlist</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="new_playlist_name_template">New playlist <xliff:g id="number">%d</xliff:g></string>
    <plurals name="NNNtrackstoplaylist">
        
        <item quantity="one">1 song added to playlist.</item>
        
        <item quantity="other"><xliff:g id="number" example="27">%d</xliff:g> songs added to playlist.</item>
    </plurals>
    <string name="emptyplaylist">Selected playlist is empty.</string>
    <string name="create_playlist_create_text">Save</string>
    <string name="create_playlist_overwrite_text">Overwrite</string>
    <string name="service_start_error_title">Playback problem</string>
    <string name="service_start_error_msg">Sorry, the song could not be played.</string>
    <string name="service_start_error_button">OK</string>
    <string-array name="weeklist">
        <item>"1 week"</item>
        <item>"2 weeks"</item>
        <item>"3 weeks"</item>
        <item>"4 weeks"</item>
        <item>"5 weeks"</item>
        <item>"6 weeks"</item>
        <item>"7 weeks"</item>
        <item>"8 weeks"</item>
        <item>"9 weeks"</item>
        <item>"10 weeks"</item>
        <item>"11 weeks"</item>
        <item>"12 weeks"</item>
    </string-array>
    <string name="weekpicker_set">Done</string>
    <string name="weekpicker_title">Set time</string>
    <string name="save_as_playlist">Save as playlist</string>
    <string name="clear_playlist">Clear playlist</string>
    <string name="musicbrowserlabel">Music</string>
    <string name="musicshortcutlabel">Music playlist</string>
    <string name="mediaplaybacklabel">Music</string>
    <string name="videobrowserlabel">Videos</string>
    <string name="mediapickerlabel">Music</string>
    <string name="playback_failed">Sorry, the player does not support this type of audio file.</string>
    <string name="cancel">Cancel</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="streamloadingtext">Connecting to <xliff:g id="host">%s</xliff:g></string>
    <string name="mediasearch">Search for <xliff:g id="term" example="Beethoven">%s</xliff:g> using:</string>
    <string name="working_artists">Artists\u2026</string>
    <string name="working_albums">Albums\u2026</string>
    <string name="working_songs">Songs\u2026</string>
    <string name="working_playlists">Playlists\u2026</string>
    <string name="loading">Loading</string>
    <string name="sort_by_track">Tracks</string>
    <string name="sort_by_album">Albums</string>
    <string name="sort_by_artist">Artists</string>
    <string name="music_picker_title">Select music track</string>
    <string name="search_settings_description">Artists, albums, and tracks</string>
    <string name="search_hint">Search Music</string>
    <string name="fast_scroll_alphabet">\u0020ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="widget_initial_text">Touch to select music.</string>
    <string name="effectspanel">Sound effects</string>
    <string name="not_play_in_call">Playback is forbidden while calling.</string>
    <string name="hint_scanning">Scanning...</string>
    <string name="sel_all">Select all</string>
    <string name="desel_all">Deselect all</string>
    <string name="add_sel">Add the selected</string>
    <string name="add_all">Add all"</string>
    <string name="del_sel">Delete the selected</string>
    <string name="del_all">Remove all</string>
    <string name="add_warning">Do you sure to add?</string>
    <string name="menu_info">属性</string>
    <string name="camera">相机</string>
    <string name="gallery">图库</string>
    <string name="video">视频</string>
    <string name="info_filename">文件名称:</string>
      <string name="menu_delete">删除</string>
      <string name="select_all">全选</string>
     <string name="info_filetype">文件格式:</string>
      <string name="info_location">文件路径:</string>
    <string name="info_size">文件大小:</string>
    <string name="info_include">包含:</string>
      <string name="info_date">修改日期:</string>
</resources>