<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:zhaoyan="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:title="@string/menu_delete"
        zhaoyan:enable="true"
        zhaoyan:iconDisable="@drawable/ic_action_delete_disable"
        zhaoyan:iconEnable="@drawable/ic_action_delete_enable"
        zhaoyan:id="@+id/menu_delete"
        zhaoyan:title="@string/menu_delete"/>
    <item
        android:title="@string/menu_info"
        zhaoyan:enable="true"
        zhaoyan:iconDisable="@drawable/ic_action_info_disable"
        zhaoyan:iconEnable="@drawable/ic_action_info_enable"
        zhaoyan:id="@+id/menu_info"
        zhaoyan:title="@string/menu_info"/>
    <item
        android:title="@string/select_all"
        zhaoyan:enable="true"
        zhaoyan:iconDisable="@drawable/ic_aciton_select"
        zhaoyan:iconEnable="@drawable/ic_aciton_select"
        zhaoyan:id="@+id/menu_select"
        zhaoyan:title="@string/select_all"/>

</menu>