<?xml version="1.0" encoding="utf-8"?>
<!-- Layout of time picker-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/weekpicker_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- weeks -->
    <com.zhaoyan.gesture.music.views.VerticalTextSpinner
        android:id="@+id/weeks"
        android:layout_width="120dip"
        android:layout_height="120dip"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dip"
        android:layout_marginBottom="6dip"
        />
    
    <!-- Set button -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dip"
        android:background="#ffffff" >

        <Button android:id="@+id/set"
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:text="@string/weekpicker_set"
            android:layout_alignParentLeft="true" />

        <Button android:id="@+id/cancel"
            android:layout_width="120dip"
            android:layout_height="wrap_content" 
            android:text="@string/cancel"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

</LinearLayout>

