<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >
        
        <LinearLayout 
            android:id="@+id/ll_info_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="@dimen/dialog_left_margin"
            >
            <TextView 
                android:id="@+id/tv_info_name_ext"
                style="@style/info_dialog_text_style"
                android:text="@string/info_filename"
                android:layout_marginRight="4dp"
                />
            
            <TextView
                android:id="@+id/tv_info_name"
                 style="@style/info_dialog_text_style"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="显示文件名称"
                />
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/ll_info_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="@dimen/dialog_left_margin"
            >
            <TextView 
                android:id="@+id/tv_info_type_ext"
                 style="@style/info_dialog_text_style"
                android:text="@string/info_filetype"
                android:layout_marginRight="4dp"
                />
            
            <TextView
                android:id="@+id/tv_info_type"
                android:singleLine="true"
                android:text="显示文件格式"
                 style="@style/info_dialog_text_style"
                />
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/ll_info_size"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="@dimen/dialog_left_margin"
            >
            <TextView 
                android:id="@+id/tv_info_size_ext"
                 style="@style/info_dialog_text_style"
                android:text="@string/info_size"
                android:layout_marginRight="4dp"
                />
            
            <TextView
                android:id="@+id/tv_info_size"
                 style="@style/info_dialog_text_style"
                android:singleLine="true"
                android:text="显示文件大小"
                />
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/ll_info_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="@dimen/dialog_left_margin"
            >
            <TextView 
                android:id="@+id/tv_info_location_ext"
                 style="@style/info_dialog_text_style"
                android:text="@string/info_location"
                android:layout_marginRight="4dp"
                />
            
            <TextView
                android:id="@+id/tv_info_location"
                 style="@style/info_dialog_text_style"
                android:text="显示文件路径"
                />
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/ll_info_include"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dialog_left_margin"
            >
            <TextView 
                android:id="@+id/tv_info_include_ext"
                 style="@style/info_dialog_text_style"
                android:text="@string/info_include"
                android:layout_marginRight="4dp"
                />
            
            <TextView
                android:id="@+id/tv_info_include"
                 style="@style/info_dialog_text_style"
                android:text="显示包含数目"
                />
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/ll_info_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dialog_left_margin"
            >
            <TextView 
                android:id="@+id/tv_info_date_ext"
                 style="@style/info_dialog_text_style"
                android:text="@string/info_date"
                android:layout_marginRight="4dp"
                />
            
            <TextView
                android:id="@+id/tv_info_date"
				 style="@style/info_dialog_text_style"
                android:text="显示日期"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>